--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -31,7 +31,7 @@
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
 /*__write_selector_here__*/ 
- #ball+#player1{
+ #ball+img{
    
   position: absolute;
   z-index: 4;
